# ow-rag-multimodal

./: .gitignore  README.md  pyproject.toml
data/: heroes.json  player_history.json
docs/: DIAGRAMA_FLUJO_RAG.md  PRESENTACION_OW_RAG.md  eval_report.tex  eval_results.txt  tune_results.txt
docs/notes/: EXPLICACION_RAG_EMBEDDINGS_Y_GUION.txt  GUIA_PROYECTO_Y_BOTONES.md
scripts/: download_images.py
src/ow_rag_multimodal/: __init__.py  cli.py  data.py  embeddings.py  eval.py  history.py  image_embeddings.py  models.py  rag.py  recommender.py  ui.py
